--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-echo "<!DOCTYPE html>
+cat > index.html << 'EOF'
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Project WebKu</title>
+    <title>Project Web Ku</title>
 </head>
 <body>
-    <h1>Selamat datang di Project WebKu</h1>
+    <h1>Selamat Datang di Project Web Ku</h1>
+    <footer>Website Footer</footer>
 </body>
-</html>" > index.html
-
-echo "node_modules/" > .gitignore
+</html>
+EOF
