--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-cat > index.html << 'EOF'
+cat > index.html  'EOF'
 <!DOCTYPE html>
 <html>
 <head>
     <title>Project Web Ku</title>
 </head>
 <body>
+    <h1>Selamat Datang di Project Web Ku</h1>
+    <footer>Website Footer</footer>
+=======
+    <header>Website Header</header>
     <h1>Selamat Datang di Project Web Ku</h1>
     <footer>Website Footer</footer>
 </body>
